--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -81,7 +81,8 @@ overcloud_nodes:
 # "external" network) in the order in which they are defined.  The
 # playbooks expect to find both an "external" network and a
 # "overcloud" network.
-external_network_cidr: 192.168.23.0/24
+# this is the "undercloud" vlan
+external_network_cidr: 10.7.12.0/27
 networks:
   - name: external
     bridge: brext
@@ -89,8 +90,8 @@ networks:
     address: "{{ external_network_cidr|nthhost(1) }}"
     netmask: "{{ external_network_cidr|ipaddr('netmask') }}"
     dhcp_range:
-      - "{{ external_network_cidr|nthhost(10) }}"
-      - "{{ external_network_cidr|nthhost(50) }}"
+      - "{{ external_network_cidr|nthhost(5) }}"
+      - "{{ external_network_cidr|nthhost(25) }}"
     nat_port_range:
       - 1024
       - 65535
@@ -99,7 +100,8 @@ networks:
     bridge:  brovc
 
 #Enable network isolation with single-nic-vlans for virtualized deployments
-undercloud_external_network_cidr: 10.0.0.1/24
+#This is the "overcloud" vlan
+undercloud_external_network_cidr: 10.7.12.128/25
 undercloud_networks:
   external:
     address: "{{ undercloud_external_network_cidr|nthhost(1) }}"
@@ -116,7 +118,7 @@ ipv6: false
 
 # Set this to `true` if you want your undercloud and overcloud vms to
 # have a VNC console available.
-enable_vnc_console: false
+enable_vnc_console: true
 
 # We have some version specific behaviors, so we need a release variable
 #
