--- a/roles/libvirt/setup/undercloud/tasks/convert_image.yml
+++ b/roles/libvirt/setup/undercloud/tasks/convert_image.yml
@@ -30,7 +30,7 @@
   command: >
     virt-customize -a {{ working_dir }}/undercloud.qcow2
     --upload {{ working_dir }}/{{ item }}:/home/stack/{{ item }}
-    --run-command 'chown stack:stack /home/stack/{{ item }}'
+    --run-command 'chown stack:stack /opt/home/stack/{{ item }}'
   changed_when: true
   environment:
     LIBGUESTFS_BACKEND: direct
