--- a/roles/tripleo/undercloud/defaults/main.yml
+++ b/roles/tripleo/undercloud/defaults/main.yml
@@ -6,7 +6,8 @@ undercloud_post_install_log: "{{ working_dir }}/undercloud_post_install.log"
 network_environment_file: network-environment.yaml.j2
 undercloud_hieradata_override_file: quickstart-hieradata-overrides.yaml.j2
 
-undercloud_network_cidr: 10.7.14.0/23
+undercloud_network_cidr: 10.7.12.0/27
+undercloud_local_ip: 10.7.12.18
 
 step_introspect: false
 bash_deploy_ramdisk: false
